force-app/main/default/objects/Question_Option__c/Question_Option__c.object-meta.xml
<CustomObject>
    <label>Clarity Form Question Option</label>
    <nameField>
        <label>Clarity Form Question Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clarity Form Question Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>