force-app/main/default/objects/Question_Option__c/fields/Active_Flow__c.field-meta.xml
<CustomField>
    <fullName>Active_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Flow</label>
    <type>Checkbox</type>
</CustomField>