force-app/main/default/objects/Question_Option__c/fields/Choice_Image__c.field-meta.xml
<CustomField>
    <fullName>Choice_Image__c</fullName>
    <label>Choice Image</label>
    <length>18</length>
    <type>Text</type>
</CustomField>