force-app/main/default/objects/Question_Option__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>